[package]
name = "rusty-yunet"
version = "0.1.1"
edition = "2021"

[dependencies]
cxx = "1.0"
log = "0.4"
serde = { version = "1", features = ["derive"], optional = true  }
thiserror = "1.0"
glam = "0.29"

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
image = "0.23"

[features]
default = []  # Define an empty default feature set
serde_support = ["serde", "glam/serde"]  # Define a feature to enable serde
